# rust_backend_template

./: .env  .gitignore  Cargo.toml  combine_files.sh  combined.txt  docker-compose.yml  manage_migrations.sh
.config/: nextest.toml
.github/workflows/: general.yml
src/: lib.rs  main.rs
src/controllers/: user_controller.rs
src/db/: connection.rs  mod.rs
src/models/: mod.rs  user.rs
src/routes/: user.rs
src/utils/: seed.rs
tests/: mod.rs
tests/setup/: mod.rs  setup.rs
tests/users/: create_user_test.rs  get_user_test.rs  mod.rs  update_user_test.rs
tests/utils/: mod.rs  pg_container.rs  seed.rs  setup.rs
tests/utils/containers/: docker_setup.rs  mod.rs  pg_image.rs
