[package]
name = "code2media"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "code2media"


[dependencies]
actix-web = "4.0.1"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
log = "0.4.20"
env_logger = "0.11.1"


[dev-dependencies]
reqwest = "0.11.23"
diesel_migrations = "2.1.0"
actix-web = "4.0.1"
actix-rt = "2.9.0"
